tests/lit/tcheck/funcall04.isa
// RUN: not %iii --batchmode %s | filecheck %s
// Copyright (C) 2025-2025 Intel Corporation

function F(x : Integer, y : Integer := 0, z : Integer);

function main() -> Integer
begin
    F(0, 1, z=>2, z=>3);
    // CHECK: Type error: multiple bindings for argument 'z'
end
